deploy: b54aeb42741f0ac74e7bc123b140e1fb9e05077d

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -14,6 +14,9 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
+<p>welcome to my ramblings...</p><br>
+<p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p><br>
+<p>there's a tagging system but you can just go chronological like blogspot</p><br>
 <ul><li><a href="/blogs/uy/">UY Overview</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>  
 <footer>
     <p>all opinions are my own</p>
