deploy: 35488a781a2b114f906ac0aebcbf1d0ddf49c00e

--- a/blogs/uy/lum/index.html
+++ b/blogs/uy/lum/index.html
@@ -14,8 +14,11 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<a href="/blogs/uy">&lt;-- Back</a>
+<a href="/blogs/uy">&lt;-- Back</a><br>
+<h1 class="blog-title">UY - Lum</h1>
+<h3 class="blog-date">Dec 17, 2024</h3>
 <p>Lum</p>
+
 
 
 <footer>
