--- a/blogs/index.html
+++ b/blogs/index.html
@@ -14,10 +14,15 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<p>welcome to my ramblings...</p><br>
-<p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p><br>
-<p>there's a tagging system but you can just go chronological like blogspot</p><br>
-<ul><li><a href="/blogs/uy/">UY Overview</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>  
+<p>welcome to my ramblings...</p>
+<p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p>
+<p>there's a tagging system but you can just go chronological like blogspot</p>
+<label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
+<input type="checkbox" id="uy-menu-toggle" class="menu-toggle"/>
+<ul class="menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
+<label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
+<input type="checkbox" id="blogs-menu-toggle" class="menu-toggle"/>
+<ul class="menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
 <footer>
     <p>all opinions are my own</p>
 </footer>
