deploy: af6d7140fe0a27af709320947fdd19f9358f1063

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bundle.css">
-    <title>About WapBlog</title>
+    <title>about figamin.net</title>
   </head>
   <body>
     <nav>
@@ -14,7 +14,7 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<h1>About the Wapchan Blog</h1>
+<h1>about figamin.net</h1>
 <p>The wapchan blog is mostly a personal site run by <a href="https://figamin.net">figamin</a>, though this site will be focused more on content related to wapchan, including anime, visual novels, and tech.</p>
 <h2>Goals</h2>
 <p>To be a hub for stuff that I like.
