--- a/blogs/index.html
+++ b/blogs/index.html
@@ -19,10 +19,10 @@
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
 <input type="checkbox" id="uy-menu-toggle" class="menu-toggle"/>
-<ul class="menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle"/>
-<ul class="menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Placeholder</a></li></ul>
 <footer>
     <p>all opinions are my own</p>
 </footer>
