--- a/blogs/uy/my-story/index.html
+++ b/blogs/uy/my-story/index.html
@@ -14,11 +14,9 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<a href="/blogs/uy">&lt;-- Back</a><br>
-<h1 class="blog-title">UY - My Story</h1>
-<h3 class="blog-date">Dec 17, 2024</h3>
+<a href="/blogs">&lt;-- Back</a>
+Dec 17, 2024
 <p>I didn't really know Rumiko's stuff when I was younger, outside of passing knowledge of Inuyasha and Ranma (didn't watch adult swim).</p>
-
 
 
 <footer>
