--- a/cool-sites/index.html
+++ b/cool-sites/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bundle.css">
-    <title>UY - Lum</title>
+    <title>cool sites - figamin.net</title>
   </head>
   <body>
     <nav>
@@ -14,10 +14,10 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<a href="/blogs">&lt;-- Back</a>
-Dec 17, 2024
-<p>Lum</p>
-
+<p>when you've been around the net enough, you tend to find some cool sites. here's a list of my favorites:</p>
+<ul>
+<li><a href="https://syrno.net/">syrno.net</a>: another guy on the same crazy quest of being an <a href="">imageboard admin</a></li>
+</ul>
 
 <footer>
     <p>all opinions are my own</p>
