--- a/blogs/wapchan/being-an-ib-admin/index.html
+++ b/blogs/wapchan/being-an-ib-admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bundle.css">
-    <title>UY - Lum</title>
+    <title>Placeholder</title>
   </head>
   <body>
     <nav>
@@ -16,7 +16,6 @@
 </nav>
 <a href="/blogs">&lt;-- Back</a>
 Dec 17, 2024
-<p>Lum</p>
 
 
 <footer>
