deploy: 4e6144303ad547fd281c68415b7ddb9d6d871a42

--- a/blogs/wapchan/being-an-ib-admin/index.html
+++ b/blogs/wapchan/being-an-ib-admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bundle.css">
-    <title>Placeholder</title>
+    <title>Being an IB Admin</title>
   </head>
   <body>
     <nav>
@@ -14,8 +14,13 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<a href="/blogs">&lt;-- Back</a>
-Dec 17, 2024
+<br><a href="/blogs">&lt;-- Back</a>
+<h1>Being an IB Admin</h1>
+<h3>Posted on Dec 18, 2024</h3>
+<p>Being an imageboard admin is one of thise things that a pretty low amount of people have actually done, even though on the surface it's not very hard. You have to remember that there's already not a ton of people running independent websites - some people make fediverse instances but that's also not really the same thing. But even for those people who do actually end up making a forum, most of them are forums in a more traditional sense - they require users to have accounts. I understand why, of course. Anyone who's run a site that allows user uploads can tell you that it's never too long before the spammers get you, especially the ones uploading illegal content. That's the hardest to deal with by far, because if there isn't a system in place to delete and report this sort of content, your site can be taken down very quickly.</p>
+<p>But for all the issues running a site like wapchan has caused me, I still enjoy it. Maybe it's because I focused on making an imageboard I'd actually enjoy using - one that keeps the inherent advantages of the format over places like reddit while cutting out the worst aspects of &quot;chan culture&quot;. The activity isn't remotely high, but it's a nice place to be, and that's a lot better than the vast majority of what are known as &quot;altchans&quot;: alternative imageboards to the &quot;main chan&quot; (4chan). A lot of them are way more extreme than the worst of /pol/, and most of them operate on a similar form of logic when it comes to the boards...</p>
+<p>When you think about a site like 4chan, you think about specific boards. People generally stick to one or a few boards and strongly identify with them, and they tend to dislike a lot of other boards and almost find their board to be &quot;independent&quot; in a way. With a lot of other imageboards this attitude persists, especially in infinity-esque sites where every board is run by a different &quot;board owner&quot; who has little to no contact with the actual site administration. For wapchan, I felt that going in a different direction would lead to a better site, one more closely alligned with the forums of old: centralizing the boards. I prefer users to identify with the site itself rather than a specific board (even if they prefer specific topics), and this is reflected in every board having more or less the same rules besides what sort of content you can post. There is no &quot;containment board&quot; because I feel that is a flawed concept - it would be like leaving a pile of garbage in the corner that you never took out because you felt it was necessary to give garbage a home still. Why do that in the first place when you can just make it clear from the start that they aren't welcome? I have zero desire to have my site devolve into a political battleground, especially when a lot of the time it turns into a nazi rally. No thanks. I have standards, and platforming fascists (even ironically) isn't one of them.</p>
+<p>If you decide to become an admin yourself, I hope you follow in my footsteps, and make a site that &quot;normal&quot; (ie people that use twitter or other corporatenet social media) would feel comfortable with using. I feel that 4chan and especially 8chan's infamy has somewhat poisoned the well when it comes the imageboard format, and that's a shame: it really is one of the best formats that prioritizes content quality or at least reactiveness above all else.</p>
 
 
 <footer>
