--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="/blogs">blogs</a></li>
             <li><a href="/cool-sites">cool sites</a></li>
             <li><label for="indexlinks-menu-toggle"><a>[find me]</a></label>
-                <input type="checkbox" id="indexlinks-menu-toggle" class="menu-toggle"/>
+                <input type="checkbox" id="indexlinks-menu-toggle" class="menu-toggle">
                 <ul class="socials-list menu">
                     <li><a href="https://twitter.com/figamin">twitter</a></li>
                     <li><a href="https://bsky.app/profile/figamin.bsky.social">bluesky</a></li>
