--- a/blogs/index.html
+++ b/blogs/index.html
@@ -18,11 +18,14 @@
 <p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p>
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
-<input type="checkbox" id="uy-menu-toggle" class="menu-toggle"/>
+<input type="checkbox" id="uy-menu-toggle" class="menu-toggle">
 <ul class="sublist menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
+<label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
+<input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle">
+<ul class="sublist menu"><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
-<input type="checkbox" id="blogs-menu-toggle" class="menu-toggle"/>
-<ul class="sublist menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Placeholder</a></li></ul>
+<input type="checkbox" id="blogs-menu-toggle" class="menu-toggle">
+<ul class="sublist menu"><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <footer>
     <p>all opinions are my own</p>
 </footer>
