--- a/blogs/uy/lum/index.html
+++ b/blogs/uy/lum/index.html
@@ -14,8 +14,9 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<a href="/blogs">&lt;-- Back</a>
-Dec 17, 2024
+<br><a href="/blogs">&lt;-- Back</a>
+<h1>UY - Lum</h1>
+<h3>Posted on Dec 18, 2024</h3>
 <p>Lum</p>
 
 
