deploy: d7af7d8a550bd9343154eeff531f4eafa97a1a1c

--- a/blogs/wapchan/the-old-about-page/index.html
+++ b/blogs/wapchan/the-old-about-page/index.html
@@ -11,12 +11,13 @@
     <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
 <br><a href="/blogs">&lt;-- Back</a>
 <h1>The old about page</h1>
-<h3>Posted on Dec 18, 2024</h3>
+<h3>Posted on Dec 19, 2024</h3>
 <p>On the previous (Lynxchan) form of wapchan, the about page contained a writeup I did in late 2022 about the early history of the site. I have preserved it here for posterity, complete with spelling and grammar mistakes. The original file can still be viewed on <a href="https://raw.githubusercontent.com/figamin/WapLynx-Neo/refs/heads/master/static/pages/about.html">github</a>.</p>
 <h1>Wapchan's <strong>F</strong>requently <strong>A</strong>sked <strong>Q</strong>uestions:</h1>
 <h3>Last updated on 11/13/22</h3>
