--- a/blogs/games/the-joys-of-hamsterball/index.html
+++ b/blogs/games/the-joys-of-hamsterball/index.html
@@ -11,12 +11,13 @@
     <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
 <br><a href="/blogs">&lt;-- Back</a>
 <h1>The Joys of Hamsterball</h1>
-<h3>Posted on Dec 18, 2024</h3>
+<h3>Posted on Dec 19, 2024</h3>
 <p>I didn't really know Rumiko's stuff when I was younger, outside of passing knowledge of Inuyasha and Ranma (didn't watch adult swim).</p>
 
 
