--- a/blogs/index.html
+++ b/blogs/index.html
@@ -11,6 +11,7 @@
     <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
@@ -19,13 +20,13 @@
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
 <input type="checkbox" id="uy-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/games/the-joys-of-hamsterball/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/games/the-joys-of-hamsterball/">The Joys of Hamsterball</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li></ul>
 <label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
 <input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle">
 <ul class="sublist menu"><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/games/the-joys-of-hamsterball/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/games/the-joys-of-hamsterball/">The Joys of Hamsterball</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/uy/my-story/">UY - My Story</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <footer>
     <p>all opinions are my own</p>
 </footer>
