--- a/cool-sites/index.html
+++ b/cool-sites/index.html
@@ -11,6 +11,7 @@
     <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
