--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bundle.css">
-    <title>about figamin.net</title>
+    <title>gallery - figamin.net</title>
   </head>
   <body>
     <nav>
@@ -15,14 +15,7 @@
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
-<h1>about figamin.net</h1>
-<p>this site will be focused more on content related to wapchan, including anime, visual novels, and tech.</p>
-<h2>Goals</h2>
-<p>to be a hub for stuff that I like.
-(it really isn't deeper than this)
-this will involve writeups &amp; blogposts.</p>
-<h2>Inspiration</h2>
-<p>i really enjoy reading the content on <a href="https://furinkan.com/">Rumic World</a> so I will be doing my own writeups.</p>
+<h1>coming soon!</h1>
 
 <footer>
     <p>all opinions are my own</p>
