--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
@@ -44,6 +45,8 @@
                 </li>
             </ul>
         </div>
+        <span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter">
+        
     </div>
 
 
