deploy: 98038ba72e397a0f83966d9e0d7159945b9887ae

--- a/blogs/games/get-yourself-an-old-optiplex/index.html
+++ b/blogs/games/get-yourself-an-old-optiplex/index.html
@@ -4,21 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/blog.css">
     <title>Get yourself an old Optiplex</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<br><a href="/blogs">&lt;-- Back</a>
-<h1>Get yourself an old Optiplex</h1>
-<h3>Posted on Jan 10, 2025</h3>
-<p>I'm sure we all have our main computers, and a lot of us read visual novels on them. I tend to read most of mine on my Steam Deck, but recently I took an old machine of mine and turned it into a retro VN powerhouse - an Optiplex 7010 SFF. This machine presumably started life working in some office being a midrange Ivy Bridge machine, until it ended up on eBay and I bought it back in 2018 to become my new home server after my older Intel Core 2 Quad Optiplex was reaching it's limits (and I originally bought that machine to serve as the core of a MAME cabinet - there's a whole story there). So this i5-3470 machine served me well, and it was the first machine I ran with Proxmox instead of just stock Debian (although I flip flopped a few times for performance reasons). But eventually that machine was retired in favor of an old rack server, and for about five years it just sat around in my basement, occasionally getting dragged out to slap a copy of Windows 10 on to run specific software, and once just to flash a DJ controller through serial because nothing newer of mine had a serial port. Recently though, I had an idea...</p>
+    <p>I'm sure we all have our main computers, and a lot of us read visual novels on them. I tend to read most of mine on my Steam Deck, but recently I took an old machine of mine and turned it into a retro VN powerhouse - an Optiplex 7010 SFF. This machine presumably started life working in some office being a midrange Ivy Bridge machine, until it ended up on eBay and I bought it back in 2018 to become my new home server after my older Intel Core 2 Quad Optiplex was reaching it's limits (and I originally bought that machine to serve as the core of a MAME cabinet - there's a whole story there). So this i5-3470 machine served me well, and it was the first machine I ran with Proxmox instead of just stock Debian (although I flip flopped a few times for performance reasons). But eventually that machine was retired in favor of an old rack server, and for about five years it just sat around in my basement, occasionally getting dragged out to slap a copy of Windows 10 on to run specific software, and once just to flash a DJ controller through serial because nothing newer of mine had a serial port. Recently though, I had an idea...</p>
 <p>So I've had this Princeton monitor I got from a relative who used it back in the 90s for about a decade now. It's served me well throughout, and I've enjoyed using it to play old games. The problem is that the PC I used when I was a kid, while certainly powerful for the time, really couldn't handle anything graphically intensitve after like 2006 or so, plus it needed a graphics card that always made a ton of sound. While I have a few other old computers that run XP, they're all slower (mostly Pentium III machines). But I read that Ivy Bridge Dell machines actually got Windows XP drivers, despite coming out right at the end of the Windows 7 era. So I had to give it a try. First up - XP SP3. But there was an immediate problem - it wouldn't even boot with ACHI enabled, and even after that was disabeld there were clearly no drivers. So then I looked outside of the box and found Windows XP Integral Edition. I hadn't used custom XP builds before, but it had a lot of nice QOL stuff for using a 20 year old operating system such as a firefox fork that can actually load most web pages. It still didn't have many drivers, but one that it did have was Ethernet, and that allowed me to get a driver utility and download the rest. So with full drivers, here's my impressions:</p>
 <ul>
 <li>It's very fast. Pretty much never lags!</li>
@@ -27,9 +17,5 @@
 Really, it's a great machine for playing old games. Sure, you can get newer machines that run Windows 7, but then you're dealing with a whole extra layer of crap on top of what XP does if all you're really looking to do is play 2000s ames . For example, these machines excell at old visual novels - and it's true that those run well on almost everything, but having the extra horsepower versus a thin client with a weaker processor makes a lot of difference if you're trying to run multiple games. Of course, the best solution is to use what you already own, but if you're willing to shell out $40-60, there's really no competiton for an XP workhorse. Just be sure to get a decent SSD as well - zero reason to use spinning disks for something like this.</li>
 </ul>
 
-
-<footer>
-    <p>all opinions are my own</p>
-</footer>
   </body>
 </html>
