--- a/blogs/uy/lum/index.html
+++ b/blogs/uy/lum/index.html
@@ -4,25 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/blog.css">
     <title>UY - Lum</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<br><a href="/blogs">&lt;-- Back</a>
-<h1>UY - Lum</h1>
-<h3>Posted on Jan 10, 2025</h3>
-<p>Lum</p>
+    <p>Lum</p>
 
-
-<footer>
-    <p>all opinions are my own</p>
-</footer>
   </body>
 </html>
