--- a/blogs/wapchan/the-old-about-page/index.html
+++ b/blogs/wapchan/the-old-about-page/index.html
@@ -4,21 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/blog.css">
     <title>The old about page</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<br><a href="/blogs">&lt;-- Back</a>
-<h1>The old about page</h1>
-<h3>Posted on Jan 10, 2025</h3>
-<p>On the previous (Lynxchan) form of wapchan, the about page contained a writeup I did in late 2022 about the early history of the site. I have preserved it here for posterity, complete with spelling and grammar mistakes. The original file can still be viewed on <a href="https://raw.githubusercontent.com/figamin/WapLynx-Neo/refs/heads/master/static/pages/about.html">github</a>.</p>
+    <p>On the previous (Lynxchan) form of wapchan, the about page contained a writeup I did in late 2022 about the early history of the site. I have preserved it here for posterity, complete with spelling and grammar mistakes. The original file can still be viewed on <a href="https://raw.githubusercontent.com/figamin/WapLynx-Neo/refs/heads/master/static/pages/about.html">github</a>.</p>
 <h1>Wapchan's <strong>F</strong>requently <strong>A</strong>sked <strong>Q</strong>uestions:</h1>
 <h3>Last updated on 11/13/22</h3>
 <p>｢what is wapchan?｣</p>
@@ -35,9 +25,5 @@
 <p>｢the first year｣</p>
 <p>Since then, Wapchan has grown steadily, and while the site has always been pretty slow, it has still managed to forge a nice little community, with seven boards covering different topics. Hopefully it will continue to grow!</p>
 
-
-<footer>
-    <p>all opinions are my own</p>
-</footer>
   </body>
 </html>
