--- a/blogs/index.html
+++ b/blogs/index.html
@@ -4,31 +4,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/blog.css">
     <title>Blog Directory</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<p>welcome to my ramblings...</p>
+    <p>welcome to my ramblings...</p>
 <p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p>
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
 <input type="checkbox" id="uy-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li></ul>
 <label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
 <input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle">
 <ul class="sublist menu"><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/games/get-yourself-an-old-optiplex/">Get yourself an old Optiplex</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/visual-novels/the-steam-deck-is-the-vn-machine/">The Steam Deck is the VN Machine</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
-<footer>
-    <p>all opinions are my own</p>
-</footer>
+<ul class="sublist menu"><li><a href="/blogs/games/get-yourself-an-old-optiplex/">Get yourself an old Optiplex</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/visual-novels/the-steam-deck-is-the-vn-machine/">The Steam Deck is the VN Machine</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
   </body>
 </html>
