deploy: 3317975267fb3d8f8246ec9f0f0e166aedcde605

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -13,12 +13,12 @@
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
 <input type="checkbox" id="uy-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/uy/blog-vn-test/">Blog VN Test</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li></ul>
 <label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
 <input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle">
 <ul class="sublist menu"><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/games/get-yourself-an-old-optiplex/">Get yourself an old Optiplex</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/visual-novels/the-steam-deck-is-the-vn-machine/">The Steam Deck is the VN Machine</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
+<ul class="sublist menu"><li><a href="/blogs/games/get-yourself-an-old-optiplex/">Get yourself an old Optiplex</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/blog-vn-test/">Blog VN Test</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/visual-novels/the-steam-deck-is-the-vn-machine/">The Steam Deck is the VN Machine</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
   </body>
 </html>
