--- a/blogs-vn/blog-vn-test/index.html
+++ b/blogs-vn/blog-vn-test/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blog.css">
+    <link rel="stylesheet" href="/static/css/blog-vn.css">
     <title>Blog VN Test</title>
   </head>
   <body>
