--- a/blogs/uy/lum/index.html
+++ b/blogs/uy/lum/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blog.css">
+    <link rel="stylesheet" href="/static/css/blog-classic.css">
     <title>UY - Lum</title>
   </head>
   <body>
