deploy: 6ba89b69eee1ebd871cd4fe0cc182ddbac8c8d91

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,18 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <title>gallery - figamin.net</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<h1>coming soon!</h1>
+    <h1>coming soon!</h1>
 
 <footer>
     <p>all opinions are my own</p>
