--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <title>about figamin.net</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<h1>about figamin.net</h1>
+    <h1>about figamin.net</h1>
 <p>this site will be focused more on content related to wapchan, including anime, visual novels, and tech.</p>
 <h2>Goals</h2>
 <p>to be a hub for stuff that I like.
