--- a/blogs/index.html
+++ b/blogs/index.html
@@ -5,21 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/blog-classic.css">
-    <title>Blog Directory</title>
+    <title>Blogs</title>
   </head>
   <body>
-    <p class="textLogo" src="/static/images/sitelogo.svg" alt="figamin.net" eleventy:ignore="">Blogs (placeholder)</p>
-<a class="box-text" href="/blogs"><div class="index-side-nav-boxes index-side-bottom-box index-side-container"><- go back</div></a>
-<p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p>
-<p>there's a tagging system but you can just go chronological like blogspot</p>
-<label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
-<input type="checkbox" id="uy-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li></ul>
-<label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
-<input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
-<label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
-<input type="checkbox" id="blogs-menu-toggle" class="menu-toggle">
-<ul class="sublist menu"><li><a href="/blogs-vn/blog-vn-test/">Blog VN Test</a></li><li><a href="/blogs/games/get-yourself-an-old-optiplex/">Get yourself an old Optiplex</a></li><li><a href="/blogs/games/touhou-is-the-lingua-franca-of-otaku/">The Joys of Hamsterball</a></li><li><a href="/blogs/uy/how-i-got-into-urusei-yatsura copy/">How I got into Urusei Yatsura</a></li><li><a href="/blogs/uy/lum/">UY - Lum</a></li><li><a href="/blogs/visual-novels/the-steam-deck-is-the-vn-machine/">The Steam Deck is the VN Machine</a></li><li><a href="/blogs/wapchan/being-an-ib-admin/">Being an IB Admin</a></li><li><a href="/blogs/wapchan/the-old-about-page/">The old about page</a></li></ul>
+    <div id="navbar">
+  <a class="box-shadow nav-boxes" href="/"><-</a>
+  <span class="box-shadow left-space nav-boxes-non-button"><b>Blogs</b></span>
+</div>
+<div class="message-box">
+  <p class="message-text">Welcome to the blogs page. Nothing too special here, just writeups on stuff I'm interested in.</p>
+</div>
+<div class="blog-entries"><div class="blog-row">
+    <span class="box-shadow nav-boxes-non-button">Jun 15, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/read-the-vn/">Read The VN</a>
+  </div><div class="blog-row">
+    <span class="box-shadow nav-boxes-non-button">Jun 15, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test/">Blog VN Test</a>
+  </div><div class="blog-row">
+    <span class="box-shadow nav-boxes-non-button">Jun 15, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test-copy/">Blog VN Test Copy</a>
+  </div></div>
   </body>
 </html>
