--- a/cool-sites/index.html
+++ b/cool-sites/index.html
@@ -4,18 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/bundle.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <title>cool sites - figamin.net</title>
   </head>
   <body>
-    <nav>
-    [<a href="/">home</a> /
-    <a href="/about">about</a> /
-    <a href="/blogs">blogs</a> /
-    <a href="/gallery">gallery</a> /
-    <a href="https://www.youtube.com/@figamin">youtube</a>]
-</nav>
-<p>when you've been around the net enough, you tend to find some cool sites. here's a list of my favorites:</p>
+    <p>when you've been around the net enough, you tend to find some cool sites. here's a list of my favorites:</p>
 <ul>
 <li><a href="https://syrno.net/">syrno.net</a>: another guy on the same crazy quest of being an <a href="">imageboard admin</a></li>
 </ul>
