--- a/projects/39chan/index.html
+++ b/projects/39chan/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/blog-classic.css">
-    <title>The Joys of Hamsterball</title>
+    <title>39chan</title>
   </head>
   <body>
-    
+    <p>39chan Placeholder</p>
+
   </body>
 </html>
