--- a/projects/wapchan/index.html
+++ b/projects/wapchan/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/blog-classic.css">
-    <title>UY - Lum</title>
+    <title>Wapchan</title>
   </head>
   <body>
-    <p>Lum</p>
+    <p>Wapchan Placeholder</p>
 
   </body>
 </html>
