deploy: b4efe40fb9db64599a4476e5aaa4cb58045f844a

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 </div>
     <div id="main-body">
         <nav class="nav-parent">
+            <a class="nav-boxes" href="/about">about</a>
             <a class="nav-boxes" href="/blogs">blogs</a>
             <a class="nav-boxes" href="/projects">projects</a>
             <a class="nav-boxes" href="/videos">videos</a>
-            <a class="nav-boxes" href="/socials">socials</a>
             <a class="nav-boxes" href="/net-friends">net friends</a>
-            <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter"></div>
+            <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><!-- FC2カウンター ここから -->
+<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40460552&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=40460552&main=1" alt=":figamin-net-counter"></noscript>
+<!-- FC2カウンター ここまで --></div>
         </nav>
         <div class="message-box">
             <p class="message-text">Hello! I'm figamin. Been relatively active in both the retro anime & visual novel scenes recently. This is a place to find my writeups about stuff that I think is neat.</p>
         </div>
-        <div class="news-tag">News - 6/14/25</div>
+        <div class="news-tag">News - 7/9/25</div>
         <div class="news-box">
-            <p class="news-text">I fixed the site so it's not horribly broken anymore
+            <p class="news-text">Changed the counter design and added an about page
             </p>
         </div>
         <!--<div class="index-news-box-title">
