--- a/about/index.html
+++ b/about/index.html
@@ -4,21 +4,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/index.css">
-    <title>about figamin.net</title>
+    <link rel="stylesheet" href="/static/css/blog-classic.css">
+    <title>About</title>
   </head>
   <body>
-    <h1>about figamin.net</h1>
-<p>this site will be focused more on content related to wapchan, including anime, visual novels, and tech.</p>
-<h2>Goals</h2>
-<p>to be a hub for stuff that I like.
-(it really isn't deeper than this)
-this will involve writeups &amp; blogposts.</p>
-<h2>Inspiration</h2>
-<p>i really enjoy reading the content on <a href="https://furinkan.com/">Rumic World</a> so I will be doing my own writeups.</p>
-
-<footer>
-    <p>all opinions are my own</p>
-</footer>
+    <div id="navbar">
+  <a class="box-shadow nav-boxes" href="/"><-</a>
+  <span class="box-shadow left-space nav-boxes-non-button"><b>About</b></span>
+</div>
+<div class="message-box" style="width: 30em; height: 31em;">
+  <p class="message-text">Hey folks. I'm Ian, but I generally go by <b>figamin</b> online.<br><br>I've been into tech related stuff ever since I got my first Windows XP computer back in 2005, and I've been tinkering around with stuff ever since.<br><br>More recently, I started watching anime and reading manga regularly beginning with <i>Urusei Yatsura</i> during the pandemic, which partially inspired me to create <a href="https://wapchan.org">wapchan.org</a> back in 2021. I've gotten into visual novels a lot lately, starting with <i>Doukyuusei</i> and <i>Higurashi no Naku Koro ni</i>.<br><br>I also have a strong connection to the marching arts, both at the collegiate level playing mellophone and working with DCI. I did not become a corps member myself due to COVID & internships but did tour with <a href="https://www.carolinacrown.org/">Crown</a> doing souvies, and continue to help out with site work on <a href="https://www.dcxmuseum.org/">DCX</a>. I haven't done a ton of personal music work in a while but I hope to fix up my minilouge one of these days.<br><br>I've started streaming and working on youtube videos again, so look out for those.</p> 
+  
+</div>
+<div class="message-box" style="height: 4em">
+  <p class="message-text">Here are some places you can find me online:</p>
+</div>
+<div class="blog-entries" style="display: ruby">
+<a class="box-shadow nav-boxes" href="https://x.com/figamin">Twitter</a>
+<a class="box-shadow nav-boxes box-top-margin" href="https://steamcommunity.com/id/figamin">Steam</a>
+<a class="box-shadow nav-boxes box-top-margin" href="https://vndb.org/u268755/ulist?vnlist=1">VNDB</a>
+<span class="box-shadow nav-boxes box-top-margin">Discord: figamin</span>
+</div>
   </body>
 </html>
