deploy: ad6fc239cbd685805326ef288bede50f114417c4

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -16,11 +16,15 @@
   <p class="message-text">Welcome to the blogs page. Nothing too special here, just writeups on stuff I'm interested in.</p>
 </div>
 <div class="blog-entries"><div class="blog-row">
-    <span class="box-shadow nav-boxes-non-button">Jul 9, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/read-the-vn/">Read The VN</a>
+    <span class="box-shadow nav-boxes-non-button">Sep 22, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/read-the-vn/">Read The VN</a>
   </div><div class="blog-row">
-    <span class="box-shadow nav-boxes-non-button">Jul 9, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test/">Blog VN Test</a>
+    <span class="box-shadow nav-boxes-non-button">Sep 22, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/one-raw-ambition/">ONE - Raw Ambition (spoilers)</a>
   </div><div class="blog-row">
-    <span class="box-shadow nav-boxes-non-button">Jul 9, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test-copy/">Blog VN Test Copy</a>
+    <span class="box-shadow nav-boxes-non-button">Sep 22, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/kanon-key-polished/">Kanon - The Key is Polish (spoilers)</a>
+  </div><div class="blog-row">
+    <span class="box-shadow nav-boxes-non-button">Sep 22, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test/">Blog VN Test</a>
+  </div><div class="blog-row">
+    <span class="box-shadow nav-boxes-non-button">Sep 22, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs-vn/blog-vn-test-copy/">Blog VN Test Copy</a>
   </div></div>
   </body>
 </html>
