--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav class="nav-parent">
             <a class="nav-boxes" href="/about">about</a>
             <a class="nav-boxes" href="/blogs">blogs</a>
-            <a class="nav-boxes" href="/projects">projects</a>
+            <a class="nav-boxes" href="/imageboards">imageboards</a>
+            <a class="nav-boxes" href="/fargo1999">fargo1999</a>
             <a class="nav-boxes" href="/videos">videos</a>
             <a class="nav-boxes" href="/net-friends">net friends</a>
             <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><!-- FC2カウンター ここから -->
