--- a/net-friends/index.html
+++ b/net-friends/index.html
@@ -25,7 +25,7 @@
     <span class="box-shadow left-space nav-boxes-non-button">PC-98 enthusiast</span>
   </div>
   <div class="blog-row">
-    <a class="box-shadow nav-boxes" href="https://x.com/enapro_circle">同人サークル「ena project」</a>
+    <a class="box-shadow nav-boxes" href="https://x.com/enapro_circle">同人サークル「ena imageboards」</a>
     <span class="box-shadow left-space nav-boxes-non-button">Independent, global doujin circle</span>
   </div>
   <div class="blog-row">
