deploy: d697683bfaf06efa6ca21d9ac41ddab0e127e093

--- a/blogs/kanon-key-polished/index.html
+++ b/blogs/kanon-key-polished/index.html
@@ -11,10 +11,11 @@
     <div id="navbar">
   <a class="box-shadow nav-boxes" href="/blogs"><-</a>
   <span class="box-shadow left-space nav-boxes-non-button"><b>Kanon - The Key is Polish (spoilers)</b></span>
-  <span class="box-shadow left-space nav-boxes-non-button">Posted on Sep 22, 2025</span>
+  <span class="box-shadow left-space nav-boxes-non-button">Posted on Sep 23, 2025</span>
 </div>
 <p>I read <a href="https://vndb.org/v33">Kanon</a> back during the month of June, and it was a real enjoyable experience. Coming off of reading all of Higurashi, this felt very different and at the same time somewhat familiar. All in all, it's a great self contained story that feels like sort of a reinterpretation of the themes found in ONE, though reading that is not necessary to enjoy this.</p>
-<p>Kanon starts off with the protagonist, Aizawa Yuuichi, arriving at a town he visited seven years ago to stay with his aunt due to his parents traveling for work, with leads to his cousin Nayuki picking him up. From then the rest of January is spent going to school, meeting girls from his past (and one who isn't), and coming to terms with how things have changed from when he last visited</p>
+<p>Kanon starts off with the protagonist, Aizawa Yuuichi, arriving at a town he visited seven years ago to stay with his aunt due to his parents traveling for work, with leads to his cousin Nayuki picking him up. From then the rest of January is spent going to school, meeting girls from his past (and one who isn't), and coming to terms with how things have changed from when he last visited.</p>
+<p>The biggest difference between ONE and Kanon is the overall presentation. While ONE was functional and fine, Kanon clearly had a lot more time put into the presentation. This can be attributed to the longer development period (about a year as opposed to the reported six months each for MOON and ONE), which led to some clear stylistic differences. The first one is how Kanon takes great effort to make each season feel distinct. The bulk of the game takes place in the winter, and unlike ONE, you can really feel it with the amount of snow present.</p>
 
 <footer>
 <div id="navbar">
