deploy: f9459fecb1fc5ab5cf4435b190319fc4cc50486c

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -16,7 +16,7 @@
   <p class="message-text">Welcome to the blogs page. Nothing too special here, just writeups on stuff I'm interested in.</p>
 </div>
 <div class="blog-entries"><div class="blog-row">
-    <span class="box-shadow nav-boxes-non-button">Sep 30, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/kanon-key-polished/">Kanon - The Key is Polish (spoilers)</a>
+    <span class="box-shadow nav-boxes-non-button">Sep 27, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/kanon-key-polished/">Kanon - The Key is Polish (spoilers, in progress)</a>
   </div><div class="blog-row">
     <span class="box-shadow nav-boxes-non-button">Sep 25, 2025:</span><a class="box-shadow left-space nav-boxes" href="/blogs/one-raw-ambition/">ONE - Raw Ambition (spoilers)</a>
   </div><div class="blog-row">
