deploy: cbd5aa89a50cc8b3a3882940b3a1707f598b29cf

--- a/fargo1999/toheart-pse/index.html
+++ b/fargo1999/toheart-pse/index.html
@@ -12,7 +12,7 @@
     <h3 class="toheart">This is an in-development patch to translate <a href="https://vndb.org/v30616">ToHeart PSE</a> into English, using the <a href="https://store.steampowered.com/app/3380520/ToHeart/">2025 Remake</a> script as a base.</h3>
     <h2 class="toheart">Preview:</h2>
     <video controls="">
-        <source src="./img/thupdate.webm" type="video/webm">
+        <source src="/static/thupdate.webm" type="video/webm">
     </video>
     <h2 class="toheart">Planned Features:</h2>
     <ul class="toheart">
