--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-boxes" href="/videos">videos</a>
             <a class="nav-boxes" href="/net-friends">net friends</a>
             <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><!-- FC2カウンター ここから -->
-<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40460552&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=40460552&main=1" alt=":figamin-net-counter"></noscript>
+<script language="javascript" type="text/javascript" src="https://counter1.fc2.com/counter.php?id=40460552&main=1"></script><noscript><img src="https://counter1.fc2.com/counter_img.php?id=40460552&main=1" alt=":figamin-net-counter"></noscript>
 <!-- FC2カウンター ここまで --></div>
         </nav>
         <div class="message-box">
