deploy: 0fd2189eeac5611175ea3d3005515e72fe0d6993

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <img id="header-logo" src="/static/images/sitelogo.svg" alt="figamin.net">
         <p id="header-quote">"They're called miracles because they don't happen."</p>
     </div>
+    <nav id="sidebar-mobile">
+            <a class="sidebar-box" href="/about">About</a>
+            <a class="sidebar-box" href="/blogs">Blogs</a>
+            <a class="sidebar-box" href="/imageboards">Imageboards</a>
+            <a class="sidebar-box" href="/fargo1999">Fargo1999</a>
+            <a class="sidebar-box" href="/videos">Videos</a>
+            <a class="sidebar-box" href="/net-friends">Net Friends</a>
+        </nav>
     <div id="general">
         <nav id="sidebar">
             <a class="sidebar-box" href="/about">About</a>
