--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a class="sidebar-box" href="/about">About</a>
             <a class="sidebar-box" href="/blogs">Blogs</a>
             <a class="sidebar-box" href="/imageboards">Imageboards</a>
+            <a class="sidebar-box" href="/figzone">FigZone</a>
             <a class="sidebar-box" href="/fargo1999">Fargo1999</a>
             <a class="sidebar-box" href="/videos">Videos</a>
             <a class="sidebar-box" href="/net-friends">Net Friends</a>
@@ -26,6 +27,7 @@
             <a class="sidebar-box" href="/about">About</a>
             <a class="sidebar-box" href="/blogs">Blogs</a>
             <a class="sidebar-box" href="/imageboards">Imageboards</a>
+            <a class="sidebar-box" href="/figzone">FigZone</a>
             <a class="sidebar-box" href="/fargo1999">Fargo1999</a>
             <a class="sidebar-box" href="/videos">Videos</a>
             <a class="sidebar-box" href="/net-friends">Net Friends</a>
